--- a/main/index.html
+++ b/main/index.html
@@ -30,13 +30,14 @@
               a statement of bold, modern architecture.</p>
             </div>
             <!-- add margin to arrow in css so don't have to write it on every button color of arrow controlled by button -->
-            <a href="portfolio.html" class="btn btn--primary">See Our Portfolio <img class="margin-left-sm invert" src="assets/images/icons/icon-arrow.svg" alt="right arrow"></a>
+            <a href="portfolio.html" class="btn btn--primary">See Our Portfolio</a>
+            <a href="portfolio.html" class="btn btn--primary btn--primary--icon"></a>
           </div>
           <ul class="slide-list">
             <li class="slide-item"><a class="btn btn--number current" href="#slide-1" class="slide-link">01</a></li>
-            <li class="slide-item"><a class="btn btn--number current" href="#slide-2" class="slide-link">02</a></li>
-            <li class="slide-item"><a class="btn btn--number current" href="#slide-3" class="slide-link">03</a></li>
-            <li class="slide-item"><a class="btn btn--number current" href="#slide-4" class="slide-link">04</a></li>
+            <li class="slide-item"><a class="btn btn--number" href="#slide-2" class="slide-link">02</a></li>
+            <li class="slide-item"><a class="btn btn--number" href="#slide-3" class="slide-link">03</a></li>
+            <li class="slide-item"><a class="btn btn--number" href="#slide-4" class="slide-link">04</a></li>
           </ul>
         </div>
       </div>
