--- a/main/index.html
+++ b/main/index.html
@@ -34,7 +34,7 @@
             <a href="portfolio.html" class="btn btn--primary btn--primary--icon"></a>
           </div>
           <ul class="slide-list">
-            <li class="slide-item"><a class="btn btn--number current" href="#slide-1" class="slide-link">01</a></li>
+            <li class="slide-item"><a class="btn btn--number btn--number--current" href="#slide-1" class="slide-link">01</a></li>
             <li class="slide-item"><a class="btn btn--number" href="#slide-2" class="slide-link">02</a></li>
             <li class="slide-item"><a class="btn btn--number" href="#slide-3" class="slide-link">03</a></li>
             <li class="slide-item"><a class="btn btn--number" href="#slide-4" class="slide-link">04</a></li>
