setup for all buttons

--- a/main/index.html
+++ b/main/index.html
@@ -31,7 +31,8 @@
             </div>
             <!-- add margin to arrow in css so don't have to write it on every button color of arrow controlled by button -->
             <a href="portfolio.html" class="btn btn--primary">See Our Portfolio</a>
-            <a href="portfolio.html" class="btn btn--primary btn--primary--icon"></a>
+            <a href="portfolio.html" class="btn btn--icon"></a>
+            <a href="portfolio.html" class="btn btn--subtle">Some Text</a>
           </div>
           <ul class="slide-list">
             <li class="slide-item"><a class="btn btn--number btn--number--current" href="#slide-1" class="slide-link">01</a></li>
