setup initial navigation

--- a/main/index.html
+++ b/main/index.html
@@ -13,12 +13,13 @@
     <div class="container-outer">
       <header>
         <div class="nav-bar">
-          <img src="assets/images/logo.svg" alt="arch logo">
+          <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
           <nav class="nav">
             <a href="portfolio.html" class="nav-link">Portfolio</a>
             <a href="about.html" class="nav-link">About Us</a>
             <a href="contact.html" class="nav-link">contact</a>
           </nav>
+          <img class="hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
         </div>
         <div class="hero">
           <div class="photo-card">
