--- a/main/index.html
+++ b/main/index.html
@@ -11,40 +11,41 @@
   </head>
   <body>
     <div class="container-outer">
-
-        <div class="nav-bar">
+      <section class="navigation">
+        <div class="nav-bar open">
           <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
           <nav class="nav">
-            <a href="portfolio.html" class="nav-link">Portfolio</a>
-            <a href="about.html" class="nav-link">About Us</a>
-            <a href="contact.html" class="nav-link">Contact</a>
+              <a href="portfolio.html" class="nav-link">Portfolio</a>
+              <a href="about.html" class="nav-link">About Us</a>
+              <a href="contact.html" class="nav-link">Contact</a>
           </nav>
           <img class="hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
           <img class="is-hidden hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon">
-          <!-- <div class="nav-bar__overlay"></div> -->
         </div>
+        <div class="overlay"></div>
+      </section>
 <!-- Add a utility class for 100%width using the grid-column: span 3 -->
 <!-- Add another utility class for span 1 @sm -->
-        <header class="header">
-          <div class="hero">
-            <div class="photo-card">
-              <div class="container">
-                <div class="text-component color-white">
-                  <h2>Project Paramour</h2>
-                  <p>Project made for an art museum near Southwest London. Project Paramour is
-                    a statement of bold, modern architecture.</p>
-                </div>
-                <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
-              </div>
+    <!-- <header class="header">
+      <div class="hero">
+        <div class="photo-card">
+          <div class="container">
+            <div class="text-component color-white">
+              <h2>Project Paramour</h2>
+              <p>Project made for an art museum near Southwest London. Project Paramour is
+                a statement of bold, modern architecture.</p>
             </div>
-            <ul class="slide-list">
-              <li class="slide-item"><a class="btn btn--number btn--number--current" href="#slide-1" class="slide-link">01</a></li>
-              <li class="slide-item"><a class="btn btn--number" href="#slide-2" class="slide-link">02</a></li>
-              <li class="slide-item"><a class="btn btn--number" href="#slide-3" class="slide-link">03</a></li>
-              <li class="slide-item"><a class="btn btn--number" href="#slide-4" class="slide-link">04</a></li>
-            </ul>
+            <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
           </div>
-    </header>
+        </div>
+        <ul class="slide-list">
+          <li class="slide-item"><a class="btn btn--number btn--number--current" href="#slide-1" class="slide-link">01</a></li>
+          <li class="slide-item"><a class="btn btn--number" href="#slide-2" class="slide-link">02</a></li>
+          <li class="slide-item"><a class="btn btn--number" href="#slide-3" class="slide-link">03</a></li>
+          <li class="slide-item"><a class="btn btn--number" href="#slide-4" class="slide-link">04</a></li>
+        </ul>
+      </div>
+    </header> -->
 
 
 
