--- a/main/index.html
+++ b/main/index.html
@@ -19,8 +19,8 @@
               <a href="about.html" class="nav-link">About Us</a>
               <a href="contact.html" class="nav-link">Contact</a>
           </nav>
-          <img class="hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
-          <img class="is-hidden hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon">
+          <img class="menu-open-icon hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
+          <img class="menu-close-icon hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon">
         </div>
         <div class="overlay"></div>
       </section>
