--- a/main/index.html
+++ b/main/index.html
@@ -12,15 +12,15 @@
   <body>
     <div class="container-outer">
       <section class="navigation">
-        <div class="nav-bar open">
+        <div class="nav-bar">
           <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
           <nav class="nav">
               <a href="portfolio.html" class="nav-link">Portfolio</a>
               <a href="about.html" class="nav-link">About Us</a>
               <a href="contact.html" class="nav-link">Contact</a>
           </nav>
-          <img class="menu-open-icon hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
-          <img class="menu-close-icon hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon">
+          <img class="nav-open-icon hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
+          <img class="nav-close-icon hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon">
         </div>
         <div class="overlay"></div>
       </section>
