reduce complexity of code by switching the icon

--- a/main/index.html
+++ b/main/index.html
@@ -19,8 +19,9 @@
               <a href="about.html" class="nav-link">About Us</a>
               <a href="contact.html" class="nav-link">Contact</a>
           </nav>
-          <img class="nav-open-icon hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
-          <img class="nav-close-icon hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon">
+          <div class="nav-icon hide@sm"></div>
+          <!-- <img class="nav-open-icon hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
+          <img class="nav-close-icon hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon"> -->
         </div>
         <div class="overlay"></div>
       </section>
