complete correct aria-collapsable menu

--- a/main/index.html
+++ b/main/index.html
@@ -14,12 +14,12 @@
       <section class="navigation">
         <div class="nav-bar">
           <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
-          <nav class="nav">
+          <nav class="nav" id="nav-items" hidden>
               <a href="portfolio.html" class="nav-link">Portfolio</a>
               <a href="about.html" class="nav-link">About Us</a>
               <a href="contact.html" class="nav-link">Contact</a>
           </nav>
-          <div class="nav-icon hide@sm"></div>
+          <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
           <!-- <img class="nav-open-icon hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
           <img class="nav-close-icon hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon"> -->
         </div>
