hide elements from screen reader

--- a/main/index.html
+++ b/main/index.html
@@ -23,7 +23,7 @@
           <!-- <img class="nav-open-icon hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
           <img class="nav-close-icon hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon"> -->
         </div>
-        <div class="overlay"></div>
+        <div class="overlay" aria-hidden="true"></div>
       </section>
 <!-- Add a utility class for 100%width using the grid-column: span 3 -->
 <!-- Add another utility class for span 1 @sm -->
