layout for all screen sizes for header slide

--- a/main/index.html
+++ b/main/index.html
@@ -20,33 +20,32 @@
               <a href="contact.html" class="nav-link">Contact</a>
           </nav>
           <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
-          <!-- <img class="nav-open-icon hide@sm" src="assets/images/icons/icon-hamburger.svg" alt="hamburger menu icon">
-          <img class="nav-close-icon hide@sm" src="assets/images/icons/icon-close.svg" alt="menu close icon"> -->
         </div>
         <div class="overlay" aria-hidden="true"></div>
       </section>
-<!-- Add a utility class for 100%width using the grid-column: span 3 -->
-<!-- Add another utility class for span 1 @sm -->
-    <!-- <header class="header">
+    <header class="header full-width col1@sm">
       <div class="hero">
-        <div class="photo-card">
-          <div class="container">
+        <div class="slides">
+
+          <div class="slide" id="slide1">
             <div class="text-component color-white">
-              <h2>Project Paramour</h2>
+              <h1>Project Paramour</h1>
               <p>Project made for an art museum near Southwest London. Project Paramour is
                 a statement of bold, modern architecture.</p>
+                <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
             </div>
-            <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
           </div>
+
         </div>
-        <ul class="slide-list">
+
+       <ul class="slide-list">
           <li class="slide-item"><a class="btn btn--number btn--number--current" href="#slide-1" class="slide-link">01</a></li>
           <li class="slide-item"><a class="btn btn--number" href="#slide-2" class="slide-link">02</a></li>
           <li class="slide-item"><a class="btn btn--number" href="#slide-3" class="slide-link">03</a></li>
           <li class="slide-item"><a class="btn btn--number" href="#slide-4" class="slide-link">04</a></li>
         </ul>
       </div>
-    </header> -->
+    </header>
 
 
 
