use background images for slide

--- a/main/index.html
+++ b/main/index.html
@@ -36,6 +36,35 @@
             </div>
           </div>
 
+          <div class="slide" id="slide2">
+            <div class="text-component color-white">
+              <h1>Seraph Station</h1>
+              <p>The Seraph Station project challenged us to design a unique station that would
+              transport people through time. The result is a fresh and futuristic model
+              inspired by space stations</p>
+              <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+            </div>
+          </div>
+
+          <div class="slide" id="slide3">
+            <div class="text-component color-white">
+              <h1>Federal II Tower</h1>
+              <p>A sequel theme project for a tower originally built in the 1800s. We achieved
+              this with a striking look of brutal minimalism with modern touches.</p>
+              <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+            </div>
+          </div>
+
+          <div class="slide" id="slide4">
+            <div class="text-component color-white">
+              <h1>Trinity Bank Tower</h1>
+              <p>Trinity Bank challenged us to make a concept for a 84 story building located
+              in the middle of a city with a high earthquake frequency. For this project we
+              used curves to blend design and stability to meet our objectives.</p>
+              <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+            </div>
+          </div>
+
         </div>
 
        <ul class="slide-list">
