working slide and layout

--- a/main/index.html
+++ b/main/index.html
@@ -26,7 +26,6 @@
     <header class="header full-width col1@sm">
       <div class="hero">
         <div class="slides">
-
           <div class="slide" id="slide1">
             <div class="text-component color-white">
               <h1>Project Paramour</h1>
@@ -67,13 +66,14 @@
 
         </div>
 
-       <ul class="slide-list">
-          <li class="slide-item"><a class="btn btn--number btn--number--current" href="#slide-1" class="slide-link">01</a></li>
-          <li class="slide-item"><a class="btn btn--number" href="#slide-2" class="slide-link">02</a></li>
-          <li class="slide-item"><a class="btn btn--number" href="#slide-3" class="slide-link">03</a></li>
-          <li class="slide-item"><a class="btn btn--number" href="#slide-4" class="slide-link">04</a></li>
-        </ul>
+       <div class="slide-nav">
+          <a class="btn btn--number btn--number--current" href="#slide1" class="slide-link">01</a>
+          <a class="btn btn--number" href="#slide2" class="slide-link">02</a>
+          <a class="btn btn--number" href="#slide3" class="slide-link">03</a>
+          <a class="btn btn--number" href="#slide4" class="slide-link">04</a>
+        </div>
       </div>
+
     </header>
 
 
