--- a/main/index.html
+++ b/main/index.html
@@ -25,62 +25,63 @@
       </section>
     <header class="header full-width col1@sm">
       <div class="hero">
-        <div class="slides">
+        <div class="carousel">
+          <div class="slides">
 
-          <div class="slide" id="slide1">
-            <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
-              srcset="assets/images/home/desktop/image-hero-paramour.jpg 1110w, assets/images/home/tablet/image-hero-paramour.jpg 573w, assets/images/home/mobile/image-hero-paramour.jpg 375w"
-              src="assets/images/home/mobile/image-hero-paramour.jpg" alt="picture of a building">
-            <div class="text-component color-white">
-              <h1>Trinity Bank Tower</h1>
-              <p>Trinity Bank challenged us to make a concept for a 84 story building located
+            <div class="slide" id="slide1">
+              <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
+                srcset="assets/images/home/desktop/image-hero-paramour.jpg 1110w, assets/images/home/tablet/image-hero-paramour.jpg 573w, assets/images/home/mobile/image-hero-paramour.jpg 375w"
+                src="assets/images/home/mobile/image-hero-paramour.jpg" alt="picture of a building">
+              <div class="text-component color-white">
+                <h1>Trinity Bank Tower</h1>
+                <p>Trinity Bank challenged us to make a concept for a 84 story building located
+                  in the middle of a city with a high earthquake frequency. For this project we
+                  used curves to blend design and stability to meet our objectives.</p>
+                <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+              </div>
+            </div>
+
+            <div class="slide" id="slide2">
+              <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
+                srcset="assets/images/home/desktop/image-hero-seraph.jpg 1110w, assets/images/home/tablet/image-hero-seraph.jpg 573w, assets/images/home/mobile/image-hero-seraph.jpg 375w"
+                src="assets/images/home/mobile/image-hero-seraph.jpg" alt="picture of a building">
+              <div class="text-component color-white">
+                <h1>Trinity Bank Tower</h1>
+                <p>Trinity Bank challenged us to make a concept for a 84 story building located
+                  in the middle of a city with a high earthquake frequency. For this project we
+                  used curves to blend design and stability to meet our objectives.</p>
+                <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+              </div>
+            </div>
+
+            <div class="slide" id="slide3">
+              <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
+                srcset="assets/images/home/desktop/image-hero-federal.jpg 1110w, assets/images/home/tablet/image-hero-federal.jpg 573w, assets/images/home/mobile/image-hero-federal.jpg 375w"
+                src="assets/images/home/mobile/image-hero-federal.jpg" alt="picture of a building">
+              <div class="text-component color-white">
+                <h1>Trinity Bank Tower</h1>
+                <p>Trinity Bank challenged us to make a concept for a 84 story building located
+                  in the middle of a city with a high earthquake frequency. For this project we
+                  used curves to blend design and stability to meet our objectives.</p>
+                <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+              </div>
+            </div>
+
+            <div class="slide" id="slide4">
+              <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
+                srcset="assets/images/home/desktop/image-hero-trinity.jpg 1110w, assets/images/home/tablet/image-hero-trinity.jpg 573w, assets/images/home/mobile/image-hero-trinity.jpg 375w"
+                src="assets/images/home/mobile/image-hero-trinity.jpg" alt="picture of a building">
+              <div class="text-component color-white">
+                <h1>Trinity Bank Tower</h1>
+                <p>Trinity Bank challenged us to make a concept for a 84 story building located
                 in the middle of a city with a high earthquake frequency. For this project we
                 used curves to blend design and stability to meet our objectives.</p>
-              <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+                <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+              </div>
             </div>
-          </div>
 
-          <div class="slide" id="slide2">
-            <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
-              srcset="assets/images/home/desktop/image-hero-seraph.jpg 1110w, assets/images/home/tablet/image-hero-seraph.jpg 573w, assets/images/home/mobile/image-hero-seraph.jpg 375w"
-              src="assets/images/home/mobile/image-hero-seraph.jpg" alt="picture of a building">
-            <div class="text-component color-white">
-              <h1>Trinity Bank Tower</h1>
-              <p>Trinity Bank challenged us to make a concept for a 84 story building located
-                in the middle of a city with a high earthquake frequency. For this project we
-                used curves to blend design and stability to meet our objectives.</p>
-              <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
-            </div>
           </div>
-
-          <div class="slide" id="slide3">
-            <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
-              srcset="assets/images/home/desktop/image-hero-federal.jpg 1110w, assets/images/home/tablet/image-hero-federal.jpg 573w, assets/images/home/mobile/image-hero-federal.jpg 375w"
-              src="assets/images/home/mobile/image-hero-federal.jpg" alt="picture of a building">
-            <div class="text-component color-white">
-              <h1>Trinity Bank Tower</h1>
-              <p>Trinity Bank challenged us to make a concept for a 84 story building located
-                in the middle of a city with a high earthquake frequency. For this project we
-                used curves to blend design and stability to meet our objectives.</p>
-              <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
-            </div>
-          </div>
-
-          <div class="slide" id="slide4">
-            <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
-              srcset="assets/images/home/desktop/image-hero-trinity.jpg 1110w, assets/images/home/tablet/image-hero-trinity.jpg 573w, assets/images/home/mobile/image-hero-trinity.jpg 375w"
-              src="assets/images/home/mobile/image-hero-trinity.jpg" alt="picture of a building">
-            <div class="text-component color-white">
-              <h1>Trinity Bank Tower</h1>
-              <p>Trinity Bank challenged us to make a concept for a 84 story building located
-              in the middle of a city with a high earthquake frequency. For this project we
-              used curves to blend design and stability to meet our objectives.</p>
-              <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
-            </div>
-          </div>
-
         </div>
-
        <div class="slide-nav">
           <a class="btn btn--number btn--number--current" href="#slide1" class="slide-link">01</a>
           <a class="btn btn--number" href="#slide2" class="slide-link">02</a>
