working mobile slide

--- a/main/index.html
+++ b/main/index.html
@@ -26,7 +26,7 @@
     <header class="header full-width col1@sm">
       <div class="hero">
         <div class="carousel">
-          <div class="slides">
+          <div class="slider">
 
             <div class="slide" id="slide1">
               <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
