--- a/main/index.html
+++ b/main/index.html
@@ -84,10 +84,10 @@
         </div>
 
        <div class="slide-nav">
-          <button class="btn btn--number btn--number--current"  class="slide-link">01</button>
-          <button class="btn btn--number" class="slide-link">02</button>
-          <button class="btn btn--number" class="slide-link">03</button>
-          <button class="btn btn--number" class="slide-link">04</button>
+          <button class="btn btn--number btn--number--current"  class="slide-link" data-slide="slide1">01</button>
+          <button class="btn btn--number" class="slide-link" data-slide="slide2">02</button>
+          <button class="btn btn--number" class="slide-link" data-slide="slide3">03</button>
+          <button class="btn btn--number" class="slide-link" data-slide="slide4">04</button>
         </div>
       </div>
 
