create vertical text component

--- a/main/index.html
+++ b/main/index.html
@@ -11,6 +11,12 @@
   </head>
   <body>
     <div class="container-outer">
+
+      <div class="vertical-content">
+        <div class="vertical-content__line"></div>
+        <div class="vertical-content__text text-uppercase">home</div>
+      </div>
+
       <section class="navigation">
         <div class="nav-bar">
           <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
