start layout of welcome section

--- a/main/index.html
+++ b/main/index.html
@@ -39,7 +39,7 @@
                 srcset="assets/images/home/desktop/image-hero-paramour.jpg 1110w, assets/images/home/tablet/image-hero-paramour.jpg 573w, assets/images/home/mobile/image-hero-paramour.jpg 375w"
                 src="assets/images/home/mobile/image-hero-paramour.jpg" alt="picture of a building">
               <div class="text-component color-white">
-                <h1>Trinity Bank Tower</h1>
+                <h1>Project Paramour</h1>
                 <p>Trinity Bank challenged us to make a concept for a 84 story building located
                   in the middle of a city with a high earthquake frequency. For this project we
                   used curves to blend design and stability to meet our objectives.</p>
@@ -101,10 +101,10 @@
 
 
 
-    <!-- <main> -->
+     <main>
       <!-- give a margin  top to the main and the same margin button to all children -->
-      <!-- <section class="welcome">
-        <h1>Welcome</h1>
+      <section class="welcome">
+        <h1 class="display">Welcome</h1>
         <div class="welcome__content">
           <div class="container">
             <div class="text-component">
@@ -161,10 +161,10 @@
             </div>
 
           </div>
-      </section> -->
-    <!-- </main> -->
+      </section>
+    </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer__logo">
         <img src="assets/images/logo.svg" alt="logo white">
       </div>
@@ -173,7 +173,7 @@
         <a href="about.html" class="nav-link">About Us</a>
         <a href="contact.html" class="nav-link">contact</a>
       </nav>
-    </footer> -->
+    </footer>
   </div>
   <script src="assets/js/scripts.js"></script>
   </body>
