--- a/main/index.html
+++ b/main/index.html
@@ -38,12 +38,11 @@
               <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
                 srcset="assets/images/home/desktop/image-hero-paramour.jpg 1110w, assets/images/home/tablet/image-hero-paramour.jpg 573w, assets/images/home/mobile/image-hero-paramour.jpg 375w"
                 src="assets/images/home/mobile/image-hero-paramour.jpg" alt="picture of a building">
-              <div class="text-component color-white">
+              <div class="slide__content">
                 <h1>Project Paramour</h1>
-                <p>Trinity Bank challenged us to make a concept for a 84 story building located
-                  in the middle of a city with a high earthquake frequency. For this project we
-                  used curves to blend design and stability to meet our objectives.</p>
-                <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
+                <p>Project made for an art museum near Southwest London. Project Paramour is
+                a statement of bold, modern architecture.</p>
+                <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
               </div>
             </div>
 
@@ -51,11 +50,11 @@
               <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
                 srcset="assets/images/home/desktop/image-hero-seraph.jpg 1110w, assets/images/home/tablet/image-hero-seraph.jpg 573w, assets/images/home/mobile/image-hero-seraph.jpg 375w"
                 src="assets/images/home/mobile/image-hero-seraph.jpg" alt="picture of a building">
-              <div class="text-component color-white">
-                <h1>Trinity Bank Tower</h1>
-                <p>Trinity Bank challenged us to make a concept for a 84 story building located
-                  in the middle of a city with a high earthquake frequency. For this project we
-                  used curves to blend design and stability to meet our objectives.</p>
+              <div class="slide__content">
+                <h1>Seraph Station</h1>
+                <p>The Seraph Station project challenged us to design a unique station that would
+                transport people through time. The result is a fresh and futuristic model
+                inspired by space stations.</p>
                 <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
               </div>
             </div>
@@ -64,11 +63,10 @@
               <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
                 srcset="assets/images/home/desktop/image-hero-federal.jpg 1110w, assets/images/home/tablet/image-hero-federal.jpg 573w, assets/images/home/mobile/image-hero-federal.jpg 375w"
                 src="assets/images/home/mobile/image-hero-federal.jpg" alt="picture of a building">
-              <div class="text-component color-white">
-                <h1>Trinity Bank Tower</h1>
-                <p>Trinity Bank challenged us to make a concept for a 84 story building located
-                  in the middle of a city with a high earthquake frequency. For this project we
-                  used curves to blend design and stability to meet our objectives.</p>
+              <div class="slide__content">
+                <h1>Federal II Tower</h1>
+                <p>A sequel theme project for a tower originally built in the 1800s. We achieved
+                this with a striking look of brutal minimalism with modern touches.</p>
                 <a href="portfolio.html" class="btn btn--primary--dark .text-component__block">See Our Portfolio</a>
               </div>
             </div>
@@ -77,7 +75,7 @@
               <img sizes="(min-width: 1024px) 1110px, (min-width: 768px) 768px, 375px"
                 srcset="assets/images/home/desktop/image-hero-trinity.jpg 1110w, assets/images/home/tablet/image-hero-trinity.jpg 573w, assets/images/home/mobile/image-hero-trinity.jpg 375w"
                 src="assets/images/home/mobile/image-hero-trinity.jpg" alt="picture of a building">
-              <div class="text-component color-white">
+              <div class="slide__content">
                 <h1>Trinity Bank Tower</h1>
                 <p>Trinity Bank challenged us to make a concept for a 84 story building located
                 in the middle of a city with a high earthquake frequency. For this project we
