--- a/main/index.html
+++ b/main/index.html
@@ -99,26 +99,24 @@
 
 
 
-     <main>
+     <main class="home">
       <!-- give a margin  top to the main and the same margin button to all children -->
       <section class="welcome">
         <h1 class="display">Welcome</h1>
         <div class="welcome__content">
-          <div class="container">
-            <div class="text-component">
-              <h3>Welcome to Arch Studio</h3>
-              <p>We have a unique network and skillset to help bring your projects to life. Our
-              small team of highly skilled individuals combined with our large network put us
-              in a strong position to deliver exceptional results.</p>
-              <p>Over the past 10 years, we have worked on all kinds of projects. From stations
-              to high-rise buildings, we create spaces that inspire and delight.</p>
-              <p>We work closely with our clients so that we understand the intricacies of each
-              project. This allows us to work in harmony the surrounding area to create truly
-              stunning projects that will stand the test of time.</p>
-            </div>
-            <div class="welcome__image">
-              <img src="assets/images/home/desktop/image-welcome.jpg" alt="image of side of building">
-            </div>
+          <div class="text-component">
+            <h2>Welcome to Arch Studio</h2>
+            <p>We have a unique network and skillset to help bring your projects to life. Our
+            small team of highly skilled individuals combined with our large network put us
+            in a strong position to deliver exceptional results.</p>
+            <p>Over the past 10 years, we have worked on all kinds of projects. From stations
+            to high-rise buildings, we create spaces that inspire and delight.</p>
+            <p>We work closely with our clients so that we understand the intricacies of each
+            project. This allows us to work in harmony the surrounding area to create truly
+            stunning projects that will stand the test of time.</p>
+          </div>
+          <div class="welcome__image">
+            <img src="assets/images/home/desktop/image-welcome.jpg" alt="image of side of building">
           </div>
         </div>
       </section>
