code to use container for welcome section

--- a/main/index.html
+++ b/main/index.html
@@ -102,8 +102,9 @@
      <main class="home">
       <!-- give a margin  top to the main and the same margin button to all children -->
       <section class="welcome">
+        <div class="horizontal-line hide@sm"></div>
         <h1 class="display">Welcome</h1>
-        <div class="welcome__content">
+        <div class="container">
           <div class="text-component">
             <h2>Welcome to Arch Studio</h2>
             <p>We have a unique network and skillset to help bring your projects to life. Our
@@ -114,9 +115,6 @@
             <p>We work closely with our clients so that we understand the intricacies of each
             project. This allows us to work in harmony the surrounding area to create truly
             stunning projects that will stand the test of time.</p>
-          </div>
-          <div class="welcome__image">
-            <img src="assets/images/home/desktop/image-welcome.jpg" alt="image of side of building">
           </div>
         </div>
       </section>
