--- a/main/index.html
+++ b/main/index.html
@@ -131,10 +131,10 @@
       </section>
 
       <section class="teams">
-        <div class="photo-card">
+        <div class="teams__content">
           <div class="container">
             <h3>Small team, big ideas</h3>
-            <a href="about.html" class-"btn--primary--dark">About Us</a>
+            <a href="about.html" class="btn btn--primary--dark">About Us</a>
           </div>
         </div>
       </section>
