--- a/main/index.html
+++ b/main/index.html
@@ -133,8 +133,10 @@
       <section class="teams">
         <div class="teams__content">
           <div class="container">
-            <h3>Small team, big ideas</h3>
-            <a href="about.html" class="btn btn--primary--dark">About Us</a>
+            <div class="text-component">
+              <h3>Small team, big ideas</h3>
+              <a href="about.html" class="btn btn--primary--dark">About Us</a>
+            </div>
           </div>
         </div>
       </section>
