--- a/main/index.html
+++ b/main/index.html
@@ -107,11 +107,12 @@
         </div>
 
       </header>
+     </div> <!-- close outer-container-->
 
 
+  <main class="home">
+    <div class="container-outer">
 
-     <main class="home">
-      <!-- give a margin  top to the main and the same margin button to all children -->
       <section class="welcome">
         <div class="horizontal-line hide@sm"></div>
         <h1 class="display">Welcome</h1>
@@ -130,7 +131,7 @@
         </div>
       </section>
 
-      <section class="teams">
+      <section class="teams full-width col1@sm">
         <div class="teams__content">
           <div class="container">
             <div class="text-component">
@@ -150,7 +151,7 @@
           <div class="project-cards">
 
             <div class="project-card" id="project1">
-             <div class="large-number">1</div>
+              <div class="large-number">1</div>
               <p class="project__title">Project Del Sol</p>
               <a class="link--subtle" href="portfolio.html">View All Projects</a>
             </div>
@@ -169,7 +170,9 @@
 
           </div>
       </section>
-    </main>
+
+    </div>
+  </main>
 
     <footer class="footer">
       <div class="footer__logo">
