simplify the layout

--- a/main/index.html
+++ b/main/index.html
@@ -132,12 +132,10 @@
       </section>
 
       <section class="teams full-width col1@sm">
-        <div class="teams__content">
-          <div class="container">
-            <div class="text-component">
-              <h3>Small team, big ideas</h3>
-              <a href="about.html" class="btn btn--primary--dark">About Us</a>
-            </div>
+        <div class="container">
+          <div class="teams__content">
+            <h3 class="margin-bottom-md">Small team, big ideas</h3>
+            <a href="about.html" class="btn btn--primary--dark">About Us</a>
           </div>
         </div>
       </section>
