use utility class to show hide nav

--- a/main/index.html
+++ b/main/index.html
@@ -98,7 +98,7 @@
             </div>
         </div>
 
-        <div class="slide-nav">
+        <div class="slide-nav display@md">
             <button class="btn btn--number btn--number--current"  class="slide-link" data-slide="slide1">01</button>
             <button class="btn btn--number" class="slide-link" data-slide="slide2">02</button>
             <button class="btn btn--number" class="slide-link" data-slide="slide3">03</button>
