--- a/main/index.html
+++ b/main/index.html
@@ -114,7 +114,7 @@
 
       <section class="welcome">
         <div class="horizontal-line hide@sm"></div>
-        <h1 class="display">Welcome</h1>
+        <h1 class="display display@sm">Welcome</h1>
         <div class="container">
           <div class="text-component">
             <h2>Welcome to Arch Studio</h2>
