--- a/main/index.html
+++ b/main/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-outer">
 
-      <div class="vertical-content">
+      <div class="vertical-content display@sm">
         <div class="vertical-content__line"></div>
         <div class="vertical-content__text text-uppercase">home</div>
       </div>
