remove unused class

--- a/main/index.html
+++ b/main/index.html
@@ -30,7 +30,7 @@
         <div class="overlay" aria-hidden="true"></div>
       </section>
 
-      <header class="header full-width col1@sm">
+      <header class="header col1@sm">
 
         <div class="carousel">
             <div class="slider">
@@ -106,7 +106,7 @@
         </div>
 
       </header>
-     </div> <!-- close outer-container-->
+    </div> <!-- close outer-container-->
 
 
   <main class="home">
@@ -168,7 +168,7 @@
           </div>
       </section>
 
-    </div>
+    </div><!--container outer-->
   </main>
 
     <footer class="footer">
