use container-width utility class

--- a/main/index.html
+++ b/main/index.html
@@ -115,7 +115,7 @@
       <section class="welcome">
         <div class="horizontal-line hide@sm"></div>
         <h1 class="huge display@sm">Welcome</h1>
-        <div class="container">
+        <div class="container container-width@md">
           <div class="text-component">
             <h2>Welcome to Arch Studio</h2>
             <p>We have a unique network and skillset to help bring your projects to life. Our
