change name of class and use named grid lines

--- a/main/index.html
+++ b/main/index.html
@@ -130,7 +130,7 @@
         </div>
       </section>
 
-      <section class="teams full-width col1@sm">
+      <section class="teams full-width col-content@sm">
         <div class="container">
           <div class="teams__content">
             <h3 class="margin-bottom-md">Small team, big ideas</h3>
