use utility class for header

--- a/main/index.html
+++ b/main/index.html
@@ -30,7 +30,7 @@
         <div class="overlay" aria-hidden="true"></div>
       </section>
 
-      <header class="header col1@sm">
+      <header class="header full-width col-content@sm">
 
         <div class="carousel">
             <div class="slider">
