--- a/main/index.html
+++ b/main/index.html
@@ -106,82 +106,100 @@
         </div>
 
       </header>
+
     </div> <!-- close outer-container-->
 
 
-  <main class="home">
-    <div class="container-outer">
+    <main class="home">
+      <div class="container-outer">
 
-      <section class="welcome">
-        <div class="horizontal-line hide@sm"></div>
-        <h1 class="text--huge display@sm">Welcome</h1>
-        <div class="container container-width@md">
-          <div class="text-component">
-            <h2>Welcome to Arch Studio</h2>
-            <p>We have a unique network and skillset to help bring your projects to life. Our
-            small team of highly skilled individuals combined with our large network put us
-            in a strong position to deliver exceptional results.</p>
-            <p>Over the past 10 years, we have worked on all kinds of projects. From stations
-            to high-rise buildings, we create spaces that inspire and delight.</p>
-            <p>We work closely with our clients so that we understand the intricacies of each
-            project. This allows us to work in harmony the surrounding area to create truly
-            stunning projects that will stand the test of time.</p>
+        <section class="welcome">
+          <div class="horizontal-line hide@sm"></div>
+          <h1 class="text--huge display@sm">Welcome</h1>
+          <div class="container container-width@md">
+            <div class="text-component">
+              <h2>Welcome to Arch Studio</h2>
+              <p>We have a unique network and skillset to help bring your projects to life. Our
+              small team of highly skilled individuals combined with our large network put us
+              in a strong position to deliver exceptional results.</p>
+              <p>Over the past 10 years, we have worked on all kinds of projects. From stations
+              to high-rise buildings, we create spaces that inspire and delight.</p>
+              <p>We work closely with our clients so that we understand the intricacies of each
+              project. This allows us to work in harmony the surrounding area to create truly
+              stunning projects that will stand the test of time.</p>
+            </div>
           </div>
+        </section>
+
+        <section class="teams full-width col-content@sm">
+          <div class="container">
+            <div class="teams__content">
+              <h3 class="margin-bottom-md">Small team, big ideas</h3>
+              <a href="about.html" class="btn btn--primary--dark">About Us</a>
+            </div>
+          </div>
+        </section>
+
+        <div class="featured">
+            <h2 class="margin-bottom-md">Featured</h2>
+
+
+            <div class="project-cards">
+
+              <div class="project-card" id="project1">
+                <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+                  srcset="assets/images/portfolio/desktop/image-del-sol.jpg 294w, assets/images/portfolio/tablet/image-del-sol.jpg 480w, assets/images/portfolio/mobile/image-del-sol.jpg 250w"
+                  src="assets/images/portfolio/mobile/image-del-sol.jpg" alt="picture of hotel near water">
+                <div class="large-number display@sm">1</div>
+                <div class="text-component">
+                  <h3>Project Del Sol</h3>
+                  <a class="link--subtle" href="portfolio.html">View All Projects</a>
+                </div>
+
+              </div>
+
+              <div class="project-card" id="project2">
+                <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
+                  srcset="assets/images/portfolio/desktop/image-228b.jpg 294w, assets/images/portfolio/tablet/image-228b.jpg 480w, assets/images/portfolio/mobile/image-228b.jpg 250w"
+                  src="assets/images/portfolio/mobile/image-228b.jpg" alt="picture of hotel near water">
+                <div class="large-number display@sm">2</div>
+                <div class="text-component">
+                  <h3>228B Tower</h3>
+                  <a class="link--subtle" href="portfolio.html">View All Projects</a>
+                </div>
+              </div>
+
+              <div class="project-card" id="project3">
+                <img class="project-card__img" sizes="(min-width: 1024px) 300px, (min-width: 768px) 500px, 250px"
+                  srcset="assets/images/portfolio/desktop/image-prototype.jpg 294w, assets/images/portfolio/tablet/image-prototype.jpg 480w, assets/images/portfolio/mobile/image-prototype.jpg 250w"
+                  src="assets/images/portfolio/mobile/image-prototype.jpg" alt="picture of hotel near water">
+                <div class="large-number display@sm">3</div>
+                <div class="text-component">
+                  <h3>Le Prototype</h3>
+                  <a class="link--subtle" href="portfolio.html">View All Projects</a>
+                </div>
+              </div>
+
+
+              <a href="portfolio.html" class="btn btn--primary--dark">See All</a>
+
+            </div>
+
+        </section>
+
+      </div><!--container outer-->
+    </main>
+
+    <!-- <footer class="footer">
+        <div class="footer__logo">
+          <img src="assets/images/logo.svg" alt="logo white">
         </div>
-      </section>
-
-      <section class="teams full-width col-content@sm">
-        <div class="container">
-          <div class="teams__content">
-            <h3 class="margin-bottom-md">Small team, big ideas</h3>
-            <a href="about.html" class="btn btn--primary--dark">About Us</a>
-          </div>
-        </div>
-      </section>
-
-      <section class="featured">
-          <div class="featured__header">
-            <h2>Featured</h2>
-            <a href="portfolio.html" class="btn btn--primary--dark">See All</a>
-          </div>
-
-          <div class="project-cards">
-
-            <div class="project-card" id="project1">
-              <div class="large-number">1</div>
-              <p class="project__title">Project Del Sol</p>
-              <a class="link--subtle" href="portfolio.html">View All Projects</a>
-            </div>
-
-            <div class="project-card" id="project2">
-              <div class="large-number">2</div>
-              <p class="project__title">228B Tower</p>
-              <a class="link--subtle" href="portfolio.html">View All Projects</a>
-            </div>
-
-            <div class="project-card" id="project3">
-              <div class="large-number">3</div>
-              <p class="project__title">Le Prototype</p>
-              <a class="link--subtle" href="portfolio.html">View All Projects</a>
-            </div>
-
-          </div>
-      </section>
-
-    </div><!--container outer-->
-  </main>
-
-    <footer class="footer">
-      <div class="footer__logo">
-        <img src="assets/images/logo.svg" alt="logo white">
-      </div>
-      <nav class="footer__nav">
-        <a href="portfolio.html" class="nav-link">Portfolio</a>
-        <a href="about.html" class="nav-link">About Us</a>
-        <a href="contact.html" class="nav-link">contact</a>
-      </nav>
-    </footer>
-  </div>
-  <script src="assets/js/scripts.js"></script>
+        <nav class="footer__nav">
+          <a href="portfolio.html" class="nav-link">Portfolio</a>
+          <a href="about.html" class="nav-link">About Us</a>
+          <a href="contact.html" class="nav-link">contact</a>
+        </nav>
+    </footer> -->
+    <script src="assets/js/scripts.js"></script>
   </body>
 </html>
