complete the tablet project cards

--- a/main/index.html
+++ b/main/index.html
@@ -143,14 +143,13 @@
         <div class="featured">
             <h2 class="margin-bottom-md">Featured</h2>
 
-
             <div class="project-cards">
 
               <div class="project-card" id="project1">
                 <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
                   srcset="assets/images/portfolio/desktop/image-del-sol.jpg 294w, assets/images/portfolio/tablet/image-del-sol.jpg 480w, assets/images/portfolio/mobile/image-del-sol.jpg 250w"
                   src="assets/images/portfolio/mobile/image-del-sol.jpg" alt="picture of hotel near water">
-                <div class="large-number display@sm">1</div>
+                <p class="large-number display@sm">1</p>
                 <div class="text-component">
                   <h3>Project Del Sol</h3>
                   <a class="link--subtle" href="portfolio.html">View All Projects</a>
@@ -162,7 +161,7 @@
                 <img class="project-card__img" sizes="(min-width: 1024px) 294px, (min-width: 768px) 500px, 250px"
                   srcset="assets/images/portfolio/desktop/image-228b.jpg 294w, assets/images/portfolio/tablet/image-228b.jpg 480w, assets/images/portfolio/mobile/image-228b.jpg 250w"
                   src="assets/images/portfolio/mobile/image-228b.jpg" alt="picture of hotel near water">
-                <div class="large-number display@sm">2</div>
+                <p class="large-number display@sm">2</p>
                 <div class="text-component">
                   <h3>228B Tower</h3>
                   <a class="link--subtle" href="portfolio.html">View All Projects</a>
@@ -173,17 +172,15 @@
                 <img class="project-card__img" sizes="(min-width: 1024px) 300px, (min-width: 768px) 500px, 250px"
                   srcset="assets/images/portfolio/desktop/image-prototype.jpg 294w, assets/images/portfolio/tablet/image-prototype.jpg 480w, assets/images/portfolio/mobile/image-prototype.jpg 250w"
                   src="assets/images/portfolio/mobile/image-prototype.jpg" alt="picture of hotel near water">
-                <div class="large-number display@sm">3</div>
+                <p class="large-number display@sm">3</p>
                 <div class="text-component">
                   <h3>Le Prototype</h3>
                   <a class="link--subtle" href="portfolio.html">View All Projects</a>
                 </div>
               </div>
 
-
-              <a href="portfolio.html" class="btn btn--primary--dark">See All</a>
-
             </div>
+          <a href="portfolio.html" class="btn btn--primary--dark">See All</a>
 
         </section>
 
