--- a/main/index.html
+++ b/main/index.html
@@ -141,7 +141,7 @@
         </section>
 
         <div class="featured">
-            <h2 class="margin-bottom-md">Featured</h2>
+            <h2>Featured</h2>
 
             <div class="project-cards">
 
