fix z index of overlay and indent of container text slide

--- a/main/index.html
+++ b/main/index.html
@@ -187,7 +187,8 @@
       </div><!--container outer-->
     </main>
 
-    <!-- <footer class="footer">
+    <div class="container-outer">
+      <footer class="footer full-width col-content@sm bg-contrast-low">
         <div class="footer__logo">
           <img src="assets/images/logo.svg" alt="logo white">
         </div>
@@ -196,7 +197,9 @@
           <a href="about.html" class="nav-link">About Us</a>
           <a href="contact.html" class="nav-link">contact</a>
         </nav>
-    </footer> -->
+        <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
+      </footer>
+    </div>
     <script src="assets/js/scripts.js"></script>
   </body>
 </html>
