correct js to use navigation element

--- a/main/index.html
+++ b/main/index.html
@@ -18,16 +18,19 @@
       </div>
 
       <section class="navigation">
-        <div class="nav-bar">
-          <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
-          <nav class="nav" id="nav-items" hidden>
-              <a href="portfolio.html" class="nav-link">Portfolio</a>
-              <a href="about.html" class="nav-link">About Us</a>
-              <a href="contact.html" class="nav-link">Contact</a>
-          </nav>
-          <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
-        </div>
         <div class="overlay" aria-hidden="true"></div>
+        <div class="container">
+          <div class="nav-bar">
+            <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
+            <nav class="nav" id="nav-items" hidden>
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
+                <a href="about.html" class="nav-link">About Us</a>
+                <a href="contact.html" class="nav-link">Contact</a>
+            </nav>
+            <button class="nav-icon hide@sm" aria-expanded="false" aria-controls="nav-items"></button>
+          </div>
+        </div>
+
       </section>
 
       <header class="header full-width col-content@sm">
