--- a/main/index.html
+++ b/main/index.html
@@ -19,7 +19,7 @@
 
       <section class="navigation">
         <div class="overlay" aria-hidden="true"></div>
-        <div class="container">
+        <div class="container width-100%@sm">
           <div class="nav-bar">
             <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
             <nav class="nav" id="nav-items" hidden>
