refactored navigation to use container to control size of navbar

--- a/main/index.html
+++ b/main/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <section class="navigation">
-        <div class="overlay" aria-hidden="true"></div>
+        <div class="overlay hide@sm" aria-hidden="true"></div>
         <div class="container width-100%@sm">
           <div class="nav-bar">
             <img class="nav-bar__logo" src="assets/images/logo.svg" alt="arch logo">
