--- a/main/index.html
+++ b/main/index.html
@@ -191,7 +191,7 @@
     </main>
 
     <div class="container-outer">
-      <footer class="footer full-width col-content@sm bg-contrast-low">
+      <footer class="footer full-width col-content@sm">
         <div class="footer__logo">
           <img src="assets/images/logo.svg" alt="logo white">
         </div>
