complete coding of desktop footer

--- a/main/index.html
+++ b/main/index.html
@@ -192,15 +192,17 @@
 
     <div class="container-outer">
       <footer class="footer full-width col-content@md">
-        <div class="footer__logo">
-          <img src="assets/images/logo.svg" alt="logo white">
+        <div class="footer__container">
+          <div class="footer__logo">
+            <img src="assets/images/logo.svg" alt="logo white">
+          </div>
+          <nav class="footer__nav">
+            <a href="portfolio.html" class="nav-link">Portfolio</a>
+            <a href="about.html" class="nav-link">About Us</a>
+            <a href="contact.html" class="nav-link">contact</a>
+          </nav>
+          <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
         </div>
-        <nav class="footer__nav">
-          <a href="portfolio.html" class="nav-link">Portfolio</a>
-          <a href="about.html" class="nav-link">About Us</a>
-          <a href="contact.html" class="nav-link">contact</a>
-        </nav>
-        <a href="portfolio.html" class="btn btn--primary--dark">See Our Portfolio</a>
       </footer>
     </div>
     <script src="assets/js/scripts.js"></script>
